Second commit(add controllers, templates)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql = true
 spring.datasource.validationQuery = SELECT 1
 spring.queries.users-query=select login, password from users where name=?
 spring.queries.roles-query=select name, role from users where name=?
+ddl-auto=creat
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
